<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
         <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_category"
        />
    <item
        android:id="@+id/nav_favourite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/nav_favourite"
        />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/nav_share"

        />


        />
    <item
        android:id="@+id/nav_rate"
        android:icon="@drawable/ic_backup_black_24dp"
        android:title="@string/nav_rate"
        />
        <item
            android:id="@+id/nav_fb"
            android:icon="@drawable/ic_fb"
            android:title="@string/nav_fb"
            />

    </group>
</menu>